--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 
 agp = "8.9.1"
+androidxDatastorePreferences = "1.1.4"
 coilCompose = "3.1.0"
 converterGson = "2.11.0"
 koinAndroid = "4.0.3"
@@ -27,6 +28,7 @@ retrofitVersion = "2.11.0"
 roomRuntime = "2.7.0"
 
 [libraries]
+androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "androidxDatastorePreferences" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coilCompose" }
